fix: alignment issues, footer

--- a/land_page.css
+++ b/land_page.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
 
 li {
     list-style: none;
@@ -39,8 +39,7 @@ body {
     margin: 0;
 }
 
-.row {
-    
+.header-row {
     font-size: 125%;
     text-align: center;
 }
@@ -167,7 +166,7 @@ padding-right: var(--page-margin);
     height: 11vw;
     width: 30vw;
     border-radius: 10px;
-    background-image: linear-gradient(to bottom,rgba(222, 186, 186, 0.819), #FE5558,#8F0000);
+    background-image: linear-gradient(to bottom,rgba(222, 186, 186, 0), #FE5558,#8F0000);
     z-index: 1;
     
 }
@@ -197,6 +196,7 @@ padding-right: var(--page-margin);
     background-position: center;
     background-repeat: no-repeat;
     height: 50vw;
+    padding: 50px 0 50px 0;
 }
 .column {
     position: relative;
@@ -235,7 +235,7 @@ padding-right: var(--page-margin);
     color:#8F0000;
     font-size: 3.5vw;
     position: absolute;
-    left:15%;
+    left:10%;
     font-weight: bold;
 }
 .text3 p{
@@ -255,14 +255,14 @@ padding-right: var(--page-margin);
 .text4{
     color:white;
     position: absolute;
-    width: 80%;
-    bottom: 5%;
+    width: 100%;
+    bottom: 10%;
     right:10%;
-    height:27vw;
+    height:22vw;
     
 }
 .text4 h1{
-    right:19%;
+    right:40%;
     position:absolute;
     color:#8F0000;
     font-family: Montserrat;
@@ -272,7 +272,7 @@ padding-right: var(--page-margin);
 }
 .text4 p{
     position:absolute;
-    right:5%;
+    right:10%;
     font-size:1.1vw;
     color:white;
     bottom:0;
@@ -282,6 +282,10 @@ padding-right: var(--page-margin);
 .footer{
     position: relative;
 }
+.footer #logo{
+    margin-left:2%;
+}
+
 .footer img{
     width: 20%;
 
@@ -289,20 +293,21 @@ padding-right: var(--page-margin);
 .cont{
     font-size:1.5vw;
     position: absolute;
-    left:20%;
-    top:0;
+    left:22%;
+    top: 0;
 }
 .cont h2{
-    padding-bottom: 2%;
+    padding: 2% 0 2% 0;
     margin:0;
     font-size: 1.5vw;
     color: #444;
-    font-weight: normal;
+    font-weight: lighter;
 }
 .cont a{
     font-size:1.5vw ;
     margin-top:2vw;
-    color:#444
+    color:#444;
+    font-weight: lighter;
 }
 .soc{
     margin:10px;
@@ -310,7 +315,10 @@ padding-right: var(--page-margin);
 .soc-item{
     display:inline;
     padding-right:5%;
-    
+    margin-right: 1.3%;
+}
+.soc-item #yt {
+    width: 2.6%;
 }
 .soc-item img{
     width:2.3%;
